Add constructor with id to Day, format code